--- a/src/app/products/components/products-list/products-list.component.html
+++ b/src/app/products/components/products-list/products-list.component.html
@@ -26,7 +26,7 @@
     <div class="row justify-content-around">
         <div class="col-12 text-center">
             <span>Total price: {{totalPrice}}   </span>         
-             <button (click)="placeOrder()" *ngIf="totalPrice > 0" class="btn btn-outline-danger mx-5">Place Order</button>
+             <button (click)="placeOrder()" *ngIf="totalPrice > 0" class="btn btn-outline-primary mx-5">Place Order</button>
 
         </div>
        
